# llsh-py

./: README.md  install_llx_linux.sh  install_llx_on_linux_z.sh  pyproject.toml
llsh/: __init__.py  __main__.py  llsh.py
