[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llsh"
version = "2024.10.9"
requires-python = ">= 3.6"
authors = [
    {name = "Ashish Sadhwani", email = "2ashishs@gmail.com"}
]
maintainers = [
    {name = "Ashish Sadhwani", email = "2ashishs@gmail.com"}
]
description = "Get the shell command syntax for any scenario described in natural language at command-line. It depends on ollama & a language model."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["llsh", "llm", "ollama", "Large Language Model", "Language Model", "ai", "Artificial Intelligence", "Ashish Sadhwani", "2ashishs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators"
]
dependencies = [
    "requests",
    "distro"
]

[project.scripts]
llsh = "llsh.llsh:main"

[project.urls]
Homepage = "https://github.com/2ashishs/llsh-py"
Repository = "https://github.com/2ashishs/llsh-py.git"
Issues = "https://github.com/2ashishs/llsh-py/issues"
